configs/2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask
spec:
  type: NodePort
  ports:
  - protocol: "TCP"
    # Port inside cluster
    port: 8000
    # Port to forward inside the pod
    targetPort: 8000
  selector:
    app: flask-app
