configs/flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: flask
  labels:
    app: flask-app
spec:
  selector:
    matchLabels:
      app: flask-app
  replicas: 1
  template: 
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flaskpod
        image: testapp
        imagePullPolicy: Never
        ports: 
          - containerPort: 8000
        resources:
          requests:
            cpu: 200m
            memory: "64M"
          limits:
            cpu: 500m
            memory: "128Mi"
          


---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask
spec:
  type: ClusterIP
  ports:
  - protocol: "TCP"
    # Port inside cluster
    port: 8000
    # Port to forward inside the pod
    targetPort: 8000
  selector:
    app: flask-app
