configs/3-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: flask
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
        - pathType: Prefix
          path: /flask
          backend:
            service:
              name: flask-service
              port: 
                number: 8000
  defaultBackend:
    service:
      name: flask-service
      port:
        number: 8000
